# vx_bevy

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
assets/shaders/: fluid_pbr.frag  fluid_pbr.vert  fog.wgsl  noise.wgsl  terrain_pbr.frag  terrain_pbr.vert  terrain_pipeline.wgsl  terrain_uniforms.wgsl  voxel.wgsl  voxel_material.wgsl  voxel_pipeline.wgsl
crates/vx_client/: Cargo.toml
crates/vx_client/src/: debug.rs  input.rs  lib.rs  player.rs  render.rs
crates/vx_client/src/render/: chunks.rs  env.rs  mod.rs  visibility.rs  world.rs
crates/vx_client/src/utils/: mesh.rs  mod.rs  tls.rs
crates/vx_core/: Cargo.toml
crates/vx_core/src/: config.rs  lib.rs  meshing.rs  platform.rs  player.rs  render.rs  voxel.rs  world.rs
crates/vx_core/src/utils/: config.rs  meshing.rs  mod.rs  valuemap.rs
crates/vx_core/src/world/: chunk_map.rs  coords.rs  meshing.rs  mod.rs  world.rs  worldgen.rs
crates/vx_core/src/worldgen/: gen.rs  mod.rs  noise.rs
crates/vx_core/src/worldgen/features/: mod.rs
src/: main.rs
src/debug/: debug_ui.rs  mod.rs
src/input/: mod.rs  player.rs
src/utils/: mod.rs  tls.rs
src/voxel/: material.rs  mod.rs  sdf.rs  voxel.rs
src/voxel/render/: chunk_material.rs  gpu_material.rs  mesh.rs  mod.rs  pipeline.rs  terrain_uniforms.rs
src/voxel/storage/: buffer.rs  chunk_map.rs  mod.rs  voxel_map.rs
src/voxel/terrain/: mod.rs
src/voxel/terraingen/: common.rs  mod.rs  noise.rs  sdf.rs
src/voxel/terraingen/biomes/: desert.rs  layered.rs  mod.rs  plains.rs  snowy_plains.rs  test.rs
src/voxel/terraingen/generators/: default.rs  flat.rs  heightmap.rs  mod.rs
src/voxel/world/: chunks.rs  chunks_anim.rs  materials.rs  meshing.rs  mod.rs  physics.rs  player.rs  render.rs  sky.rs  terrain.rs  voxel.rs
