
[package]
name = "vx_bevy"
version = "0.2.0"
authors = ["Lucas A. <game4allyt@gmail.com>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
ndshape = "0.3.0"
block-mesh = "0.2.0"
ndcopy = "0.3.0"
thread_local = "1.1.4"
bevy_egui = "0.14.0"
float-ord = "0.3.2"
futures-lite = "1.12.0"
once_cell = "1.0"
simdnoise = { git = "https://github.com/jackmott/rust-simd-noise" }
bevy_atmosphere = "0.3.0"
bitflags = "1.3.2"
ilattice = { version = "0.1.0", features = ["glam", "morton-encoding"] }

[patch.crates-io]
ilattice = { git = "https://github.com/bonsairobo/ilattice-rs" }

[profile.dev]
opt-level = 3

[profile.release]
lto = "thin"