
[package]
name = "vx_bevy"
version = "0.2.0"
authors = ["Lucas A. <game4allyt@gmail.com>"]
edition = "2021"

[dependencies]
bevy = "0.10.1"
ndshape = "0.3.0"
block-mesh = "0.2.0"
ndcopy = "0.3.0"
thread_local = "1.1.7"
bevy_egui = "0.20.3"
float-ord = "0.3.2"
futures-lite = "1.12.0"
once_cell = "1.17.1"
bevy_atmosphere = "0.6.0"
bitflags = "2.0.2"
ilattice = { version = "0.3.0", features = ["glam", "morton-encoding"] }
noise = "0.8.2"

[profile.dev]
opt-level = 3

[profile.release]
lto = "thin"
