
[package]
name = "vx_bevy"
version = "0.2.1"
authors = ["Lucas A. <game4allyt@gmail.com>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14"
ndshape = "0.3.0"
block-mesh = "0.2.0"
ndcopy = "0.3.0"
thread_local = "1.1.8"
bevy_egui = "0.30"
float-ord = "0.3.2"
futures-lite = "2.5.0"
once_cell = "1.20.2"
bevy_atmosphere = "0.10"
bitflags = "2.0.2"
ilattice = { version = "0.4.0", features = ["glam", "morton-encoding"] }
noise = "0.8.2"
itertools = "0.13.0"


[profile.dev]
opt-level = 3

[profile.release]
lto = "thin"
