[package]
name = "vx_client"
version = "0.1.0"
authors = ["Lucas A. <game4allyt@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
vx_core = { path = "../vx_core" }
building-blocks = "0.6.0"