[package]
name = "vx_client"
version = "0.1.0"
authors = ["Lucas A. <game4allyt@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "6caa2622", features = ["serialize"] }
vx_core = { path = "../vx_core" }
building-blocks = "0.7.0"
ron = "0.6.4"
serde = "1.0.126"
enum-iterator = "0.7.0"
thread_local = "1.1.3"

# [profile.release]
# lto = true